Новая валюта взамен "евро". Вынес в кофиг ключи внешних сервисов